fixed hero carousel text alignment

--- a/components/Modules/CarouselHero/carouselHero.module.scss
+++ b/components/Modules/CarouselHero/carouselHero.module.scss
@@ -68,7 +68,7 @@
   .headline {
     padding: 0 2rem;
     max-width: 890px;
-    text-align: center;
+    text-align: left;
   }
 
   picture,
